Fix invisible timeline images

--- a/assets/thinkingVisually-0.0.1.css
+++ b/assets/thinkingVisually-0.0.1.css
@@ -8912,6 +8912,8 @@ span {
   margin-top: 8px;
 }
 .timeline-chart [ng-drop] img#displayImg {
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
 .timeline-chart [ng-drop].drag-enter {
